# VSCODE-APP

./: .replit  README.md  app.py  errorlog.txt  main.py  models.py  pyproject.toml  replit.md  requirements.txt  test_modules.py
blueprints/: __init__.py  admin.py  data_lab.py  import_export.py  inventory.py  module_template.py
instance/: ahmed_cement.db
templates/: basket_view.html  bookings.html  client_ledger.html  clients.html  daily_transactions.html  data_lab.html  decision_ledger.html  deliveries.html  direct_sales.html  dispatching.html  financial_details.html  grn.html  import_export.html  import_jumble.html  import_review.html  index.html  layout.html  ledger.html  login.html  material_ledger.html  materials.html  mixed_transactions.html  payments.html  pdf_report.html  pending_bills.html  receiving.html  settings.html  stock_summary.html  tracking.html  unpaid_transactions.html  view_bill.html
utils/: module_loader.py
