[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=24.1.1",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.46",
    "werkzeug>=3.1.5",
]
